--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
-
+.center {
+  margin: 0 auto;
+}
+.align-text-center {
+  text-align: center;
+}
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
