--- a/src/app/Components/remove-card/remove-card.component.css
+++ b/src/app/Components/remove-card/remove-card.component.css
@@ -1,3 +1,7 @@
-.margin-btn {
-  margin-right: 15px;
+.btn-group {
+  display: flex;
+  justify-content: space-between;
+}
+.button-width {
+  width: 45%;
 }
