--- a/src/app/Components/remove-card/remove-card.component.html
+++ b/src/app/Components/remove-card/remove-card.component.html
@@ -1,17 +1,24 @@
 <div class="align-text-center" *ngIf="!displayLoader; else loading">
   <h3>Are you sure you want to delete this card?</h3>
-  <div>
+  <div class="btn-group">
     <button
       mat-raised-button
       color="primary"
       (click)="deleteCard()"
-      class="margin-btn"
+      class="button-width"
     >
       OK
     </button>
-    <button mat-stroked-button color="primary" (click)="dialogRef.close()">Cancel</button>
+    <button
+      mat-stroked-button
+      color="primary"
+      class="button-width"
+      (click)="dialogRef.close()"
+    >
+      Cancel
+    </button>
   </div>
 </div>
 <ng-template #loading>
-  <mat-spinner class="center"></mat-spinner>
+  <mat-spinner class="center" [diameter]="spinnerDiameter"></mat-spinner>
 </ng-template>
