--- a/src/app/Components/remove-card/remove-card.component.html
+++ b/src/app/Components/remove-card/remove-card.component.html
@@ -1,3 +1,8 @@
+<i
+  class="fa fa-times close-icon cursor"
+  aria-hidden="true"
+  (click)="dialogRef.close()"
+></i>
 <div class="align-text-center" *ngIf="!displayLoader; else loading">
   <h3>Are you sure you want to delete this card?</h3>
   <div class="btn-group">
